# gesture-driven-robot

./: .gitignore  README.md  gitignore  main.py  pyproject.toml
gesture_module/: detector.py  sender.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gesture_robot/lib/gesture_robot/: command_bridge.py
install/gesture_robot/share/ament_index/resource_index/package_run_dependencies/: gesture_robot
install/gesture_robot/share/ament_index/resource_index/parent_prefix_path/: gesture_robot
install/gesture_robot/share/gesture_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gesture_robot/share/gesture_robot/cmake/: gesture_robotConfig.cmake
install/gesture_robot/share/gesture_robot/worlds/: simple_world.sdf
log/: latest_build
robot_module/ros2_ws/src/gesture_robot/: CMakeLists.txt  package.xml
robot_module/ros2_ws/src/gesture_robot/launch/: simulation.launch.py
robot_module/ros2_ws/src/gesture_robot/scripts/: command_bridge.py
robot_module/ros2_ws/src/gesture_robot/urdf/: robot.urdf.xacro
shared/: commands.py
